Wed Aug 15 11:42:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_clang.GNU:
          Support for c++0x flag

Wed Aug 15 11:29:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_clang_common.GNU:
          Support for c++0x flag

Tue Aug 14 22:22:05 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/config-vxworks6.8.h:

          When building for VxWorks kernel mode, define ACE_LACKS_STD_WSTRING.

Tue Aug 14 06:35:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp:
          Extended suppression list

Thu Aug  9 07:03:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added packages

        * include/makeinclude/platform_g++_common.GNU:
          Use -Wno-deprecated with C++11 due to the heavy usage of auto_ptr

        * tests/randomize.h:
          Doxygen fix

Wed Aug  8 22:13:55 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/ACE.cpp:
        * ace/ACE_crc_ccitt.cpp:
        * ace/Basic_Types.h:
        * ace/Configuration_Import_Export.cpp:
        * ace/Handle_Set.inl:
        * ace/INET_Addr.inl:
        * ace/Message_Queue_Vx.inl:
        * ace/Name_Request_Reply.cpp:
        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_unistd.inl:
        * ace/Select_Reactor_T.inl:
        * ace/Service_Config.cpp:
        * ace/Stack_Trace.cpp:
        * ace/UUID.cpp:
        * ace/config-vxworks6.9.h:
        * include/makeinclude/platform_vxworks6.8.GNU:
        * include/makeinclude/platform_vxworks6.9.GNU:

          Enable compiling for 64-bit VxWorks 6.9 (x86 RTP static).

Wed Aug  8 15:30:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * ace/config-linux.h:

          According to man pages Linux uses different (compared to UNIX systems) types
          for setting IP_MULTICAST_TTL and IPV6_MULTICAST_LOOP / IP_MULTICAST_LOOP
          in setsockopt/getsockopt.