@@ -116,7 +116,8 @@ public:
                           block_name,
                           ACE_OS::last_error()));
       shared = c_memory_pool->malloc(block_size);
-      if (shared < 0)
+      // reinterpret_cast due to some compilers warning against ordering pointers with integers
+      if (reinterpret_cast<ssize_t> (shared) < 0)
       {
         ACE_DEBUG((LM_INFO, ACE_TEXT("New Shared Memory block could not be allocated. errno = %d.\n"),
                             ACE_OS::last_error()));
